[gd_scene load_steps=5 format=2]

[ext_resource path="res://Effects/magic_circle/components/Box.gd" type="Script" id=1]
[ext_resource path="res://Effects/magic_circle/materials/box_mat.tres" type="Material" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="Animation" id=21]
resource_name = "Invoke"
tracks/0/type = "value"
tracks/0/path = NodePath("CSGBox2:material:shader_param/Progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:gravity_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -0.2, 1.0 ]
}

[node name="Box" type="RigidBody"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="."]
width = 0.4
height = 0.4
depth = 0.4
material = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invoke = SubResource( 21 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
